overflow fix

--- a/src/components/chat.scss
+++ b/src/components/chat.scss
@@ -46,7 +46,7 @@ Mixins
     font-family: 'Avenir', 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 1.3;
-    overflow: hidden;
+    // overflow: hidden;
   }
   
   .bg {
