--- a/src/index.scss
+++ b/src/index.scss
@@ -65,7 +65,6 @@ code {
 }
 .module-wrapper {
 	// height: calc(100vh - 52px);
-	overflow-y: auto;
 	padding: 20px 0;
 	.blocks {
 		display: flex;
